# cpp_bitmap_reader

./: .gitignore  CMakeLists.txt  README.md  create_bitmap.py
include/: bitmap.h
src/: bitmap.cpp  main.cpp
